# HeatSimulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/100x100_air/: config.ini
examples/100x100_water/: config.ini
examples/10x10_air/: config.ini
examples/10x10_water/: config.ini
include/: confReader.hpp  heat.hpp  outputWriter.hpp
src/: main.cpp
src/sources/: confReader.cpp  heat.cpp  outputWriter.cpp
